cluster/apps/adguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      containers:
      - name: adguard
        image: adguard/adguardhome:latest
        ports:
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        - containerPort: 53
          name: dns-tcp
          protocol: TCP
        - containerPort: 3000
          name: http
        volumeMounts:
        - name: adguard-config
          mountPath: /opt/adguardhome/conf
        - name: adguard-work
          mountPath: /opt/adguardhome/work
      volumes:
      - name: adguard-config
        persistentVolumeClaim:
          claimName: adguard-config-pvc
      - name: adguard-work
        persistentVolumeClaim:
          claimName: adguard-work-pvc
