cluster/apps/adguard/adguard-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
  namespace: networking
spec:
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 80 
---
apiVersion: v1
kind: Endpoints
metadata:
    name: adguard-home
    namespace: networking
subsets:
  - addresses:
        - ip: "192.168.0.22"
    ports:
        - port: 80
