cluster/apps/adguard/dns-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns-service
  namespace: default
spec:
  selector:
    app: adguard
  ports:
  - name: dns-udp
    port: 53
    targetPort: 53
    protocol: UDP
  - name: dns-tcp
    port: 53
    targetPort: 53
    protocol: TCP
  type: LoadBalancer
  # If LoadBalancer doesn't work in your environment, use NodePort instead:
  # type: NodePort
  # ports:
  # - name: dns-udp
  #   port: 53
  #   targetPort: 53
  #   protocol: UDP
  #   nodePort: 30053
  # - name: dns-tcp
  #   port: 53
  #   targetPort: 53
  #   protocol: TCP
